--- a/css/media.css
+++ b/css/media.css
@@ -97,9 +97,6 @@
 }
 
 @media (max-width: 850px) {
-  body {
-    overflow-y: hidden;
-  }
   .header__top-inside {
     -webkit-flex-basis: 450px;
         -ms-flex-preferred-size: 450px;
@@ -111,16 +108,167 @@
   .header__nav-btn-icon {
     display: block;
   }
-  .header__mobile-nav {
-    display: -webkit-box;
-    display: -webkit-flex;
-    display: -ms-flexbox;
-    display: flex;
-  }
   .header__link-logo {
     margin: 0px auto;
   }
   .header__search-box {
-    max-width: 200px;
+    width: 200px;
+  }
+}
+
+@media (max-width: 756px) {
+  .header__logo {
+    -webkit-flex-basis: 150px;
+        -ms-flex-preferred-size: 150px;
+            flex-basis: 150px;
+  }
+  .header__link-logo {
+    margin: 0px 10px 0px 10px;
+  }
+  .header__text-title {
+    font-size: 58px;
+    line-height: 95px;
+  }
+  .header__text {
+    font-size: 20px;
+  }
+  .header__cards {
+    font-size: 12px;
+  }
+  .main__cards-header {
+    display: block;
+    margin: 0px auto 15px auto;
+  }
+  .footer__nav {
+    padding-left: 34px;
+    -webkit-column-gap: 17px;
+       -moz-column-gap: 17px;
+            column-gap: 17px;
+  }
+}
+
+@media (max-width: 560px) {
+  .header__logo {
+    display: none;
+  }
+  .header__cards {
+    display: block;
+    width: -webkit-fit-content;
+    width: -moz-fit-content;
+    width: fit-content;
+  }
+  .header__card {
+    display: block;
+    padding: 10px;
+    margin-bottom: 10px;
+    -webkit-border-radius: 10px;
+            border-radius: 10px;
+    width: 100%;
+    font-size: 9px;
+  }
+  .main__nav-columns {
+    -webkit-box-pack: center;
+    -webkit-justify-content: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    max-width: 350px;
+  }
+  .main__nav-text-title {
+    font-size: 30px;
+  }
+  .main__nav-text {
+    width: 190px;
+  }
+  .main__nav-link-wrap {
+    font-size: 9px;
+  }
+  .main__news {
+    padding: 0px 15px 0px 15px;
+  }
+  .footer__nav-container {
+    display: block;
+    margin: 0px auto;
+  }
+  .footer__nav {
+    display: block;
+    padding-left: 0px;
+  }
+  .footer__column-nav {
+    max-width: 540px;
+    margin: 0 auto 40px auto;
+  }
+  .footer__media {
+    margin: 0px auto;
+  }
+}
+
+@media (max-width: 450px) {
+  .main__text {
+    text-align: center;
+  }
+  .main__link-title {
+    -webkit-box-pack: center;
+    -webkit-justify-content: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
+  .main__info-imgs {
+    width: 400px;
+  }
+  .main__info-img {
+    width: 100%;
+  }
+}
+
+@media (max-width: 350px) {
+  .header__search-box:hover > .header__search-input {
+    width: 140px;
+  }
+  .header__text-title {
+    font-size: 38px;
+  }
+  .header__text {
+    font-size: 18px;
+  }
+  .header__card {
+    font-size: 15px;
+  }
+  .main__nav-text-title {
+    font-size: 28px;
+  }
+  .main__text {
+    font-size: 28px;
+  }
+  .main__card-img {
+    width: 300px;
+  }
+  .main__info-imgs {
+    width: 300px;
+  }
+  .main__new {
+    display: block;
+    text-align: center;
+  }
+  .main__new-img {
+    display: block;
+    margin: 0px auto 10px auto;
+  }
+  .footer__column-nav {
+    width: 190px;
+  }
+}
+
+@media (max-width: 320px) {
+  .header__search-box:hover > .header__search-input {
+    width: 100px;
+  }
+  .main__card-link {
+    font-size: 19px;
+  }
+  .main__text {
+    font-size: 26px;
+  }
+  .main__link {
+    font-size: 18px;
   }
 }
