--- a/scss/media.scss
+++ b/scss/media.scss
@@ -8,8 +8,6 @@
         &__cards {
             margin: 0px auto;
         }
-        &__info-text {
-        }
         &__text-title {
             text-align: center;
         }
@@ -79,9 +77,6 @@
 }
 
 @media (max-width: 850px) {
-    body {
-        overflow-y: hidden;
-    }
     .header {
         &__top-inside {
             flex-basis: 450px;
@@ -89,21 +84,187 @@
         &__nav {
             display: none;
         }
-        &__nav-btn {
-        }
+
         &__nav-btn-icon {
             display: block;
         }
-        &__mobile-nav {
-            display: flex;
-        }
-        &__logo {
-        }
+
         &__link-logo {
             margin: 0px auto;
         }
         &__search-box {
-            max-width: 200px;
+            width: 200px;
+        }
+    }
+}
+
+@media (max-width: 756px) {
+    .header {
+        &__logo {
+            flex-basis: 150px;
+        }
+        &__link-logo {
+            margin: 0px 10px 0px 10px;
+        }
+        &__text-title {
+            font-size: 58px;
+            line-height: 95px;
+        }
+        &__text {
+            font-size: 20px;
+        }
+        &__cards {
+            font-size: 12px;
+        }
+    }
+    .main {
+        &__cards-header {
+            display: block;
+            margin: 0px auto 15px auto;
+        }
+    }
+    .footer {
+        &__nav {
+            padding-left: 34px;
+            column-gap: 17px;
+        }
+    }
+}
+
+@media (max-width: 560px) {
+    .header {
+        &__logo {
+            display: none;
+        }
+
+        &__cards {
+            display: block;
+            width: fit-content;
+        }
+        &__card {
+            display: block;
+            padding: 10px;
+            margin-bottom: 10px;
+            border-radius: 10px;
+            width: 100%;
+            font-size: 9px;
+        }
+    }
+    .main {
+        &__nav-columns {
+            justify-content: center;
+            max-width: 350px;
+        }
+        &__nav-text-title {
+            font-size: 30px;
+        }
+        &__nav-text {
+            width: 190px;
+        }
+
+        &__nav-link-wrap {
+            font-size: 9px;
+        }
+        &__news {
+            padding: 0px 15px 0px 15px;
+        }
+    }
+    .footer {
+        &__nav-container {
+            display: block;
+
+            margin: 0px auto;
+        }
+        &__nav {
+            display: block;
+            padding-left: 0px;
+        }
+        &__column-nav {
+            max-width: 540px;
+            margin: 0 auto 40px auto;
+        }
+        &__media {
+            margin: 0px auto;
+        }
+    }
+}
+@media (max-width: 450px) {
+    .main {
+        &__text{
+            text-align: center;
+        }
+        &__link-title{
+            justify-content: center;
+        }
+        &__info-imgs {
+            width: 400px;
+        }
+        &__info-img {
+            width: 100%;
+        }
+    }
+}
+
+@media (max-width: 350px) {
+    .header {
+        &__search-box:hover > .header__search-input {
+            width: 140px;
+        }
+        &__text-title {
+            font-size: 38px;
+        }
+        &__text {
+            font-size: 18px;
+        }
+        &__card {
+            font-size: 15px;
+        }
+    }
+    .main {
+        &__nav-text-title {
+            font-size: 28px;
+        }
+        &__text {
+            font-size: 28px;
+        }
+        &__card-img {
+            width: 300px;
+        }
+        &__info-imgs {
+            width: 300px;
+        }
+        &__new{
+            display: block;
+            text-align: center;
+        }
+        &__new-img{
+            display: block;
+            margin: 0px auto 10px auto;
+
+        }
+        
+    }
+    .footer{
+            &__column-nav{
+                width: 190px;
+            }
+        }
+}
+@media (max-width: 320px) {
+    .header{
+        &__search-box:hover > .header__search-input {
+            width: 100px;
+        }
+    }
+    .main{
+        &__card-link{
+            font-size: 19px;
+        }
+        &__text{
+            font-size: 26px;
+        }
+        &__link{
+            font-size: 18px;
         }
     }
 }
